@@ -9,6 +9,14 @@ defaults {
 }
 
 # ---------------------------------------------------------------------------------------------------------------------
+# Discord plugin
+# ---------------------------------------------------------------------------------------------------------------------
+
+alert discord.message "discord" {
+  url = "https://discord.com/api/webhooks/.../..."
+}
+
+# ---------------------------------------------------------------------------------------------------------------------
 # Heartbeat plugin
 # ---------------------------------------------------------------------------------------------------------------------
 
