@@ -1,0 +1,18 @@
+= Discord plugin
+:toc: macro
+
+The discord plugin provides alerts that send messages to Discord channels.
+
+== Alerts
+
+=== discord.message
+
+[source,goplum]
+----
+alert discord.message "example" {
+  url = "https://discord.com/api/webhooks/.../..."
+}
+----
+
+Sends a Discord message via a webhook. To enable incoming webhooks go to
+Channel Settings → Integrations → Webhook → New Webhook.
